--- a/mysite/news/templates/news/index.html
+++ b/mysite/news/templates/news/index.html
@@ -14,15 +14,15 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Navbar</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="/">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="/">Добавить новость</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Добавить новость</a></li>
             </ul>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="col-md-3">
             <div class="list-group">
                 {% for item in categories %}
-                <a href="/category/{{ item.pk }}" class="list-group-item list-group-item-action">{{ item.title }}</a>
+                <a href="{% url 'category' item.pk %}" class="list-group-item list-group-item-action">{{ item.title }}</a>
                 {% endfor %}
             </div>
         </div>
@@ -44,7 +44,7 @@
             {% for item in news %}
             <div class="card mb-3">
                 <div class="card-header">
-                    Категория: {{ item.category }}
+                    <a href="{% url 'category' item.category.pk %}">Категория: {{ item.category }}</a>
                 </div>
                 <div class="card-body">
                     <div class="media">
