--- a/mysite/news/templates/news/test.html
+++ b/mysite/news/templates/news/test.html
@@ -1,20 +1,24 @@
-<!--{% extends 'base.html' %}-->
+{% extends 'base.html' %}
 
-<!--{% block title %}-->
-<!--Тестовая страница :: {{ block.super }}-->
-<!--{% endblock %}-->
+{% block title %}
+Обратная связь :: {{ block.super }}
+{% endblock %}
 
-<!--{% block sidebar %}-->
-<!--{% include 'inc/_sidebar.html' %}-->
-<!--{% endblock %}-->
+{% block sidebar %}
+{% include 'inc/_sidebar.html' %}
+{% endblock %}
 
-<!--{% block content %}-->
+{% block content %}
 
-<!--    {% for name in page_obj.object_list %}-->
-<!--        <p>{{ name }}</p>-->
-<!--    {% endfor %}-->
+<h1>Обратная связь</h1>
 
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary btn-block">Отправить</button>
 
-<!--{% endblock %}-->
+</form>
+
+{% endblock %}
 
 
