--- a/mysite/news/templates/news/news_detail.html
+++ b/mysite/news/templates/news/news_detail.html
@@ -19,8 +19,7 @@
             {% if item.photo %}
             <img src="{{ news_item.photo.url }}" alt="" width='350' class="mr-3">
             {% else %}
-            <img src="https://picsum.photos/id/237/350/205" alt=""
-                 class="mr-3">
+            <img src="{{ news_item.photo.url }}" alt="" width='350' class="mr-3">
             {% endif %}
             <div class="media-body">
                 <h5 class="card-title">{{ news_item.title }}</h5>
