--- a/mysite/news/templates/news/news_detail.html
+++ b/mysite/news/templates/news/news_detail.html
@@ -23,7 +23,7 @@
             {% endif %}
             <div class="media-body">
                 <h5 class="card-title">{{ news_item.title }}</h5>
-                <p class="card-text">{{ news_item.content }}.</p>
+                <p class="card-text">{{ news_item.content|safe|linebreaks }}</p>
             </div>
         </div>
     </div>
